<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout android:layout_width="match_parent"
        style="@style/quiz_vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:id="@+id/quiz_view">

        <!--Description-->
        <TextView style="@style/description"
            android:text="@string/quiz_description" />


        <!--Question 1-->
        <TextView style="@style/question"
            android:text="@string/question_original_owners" />

        <LinearLayout style="@style/horizontal_layout">

            <CheckBox android:id="@+id/Larry"
                style="@style/answer"
                android:text="@string/answer_Larry" />

            <CheckBox android:id="@+id/John"
                style="@style/answer"
                android:text="@string/answer_John" />

        </LinearLayout>

        <LinearLayout style="@style/horizontal_layout">

            <CheckBox android:id="@+id/James"
                style="@style/answer"
                android:text="@string/answer_James" />

            <CheckBox android:id="@+id/Jay"
                style="@style/answer"
                android:text="@string/answer_Jay" />

        </LinearLayout>


        <!--Question 2-->
        <TextView style="@style/question"
            android:text="@string/question_first_employee" />

        <LinearLayout style="@style/horizontal_layout">

            <CheckBox android:id="@+id/Chris"
                style="@style/answer"
                android:text="@string/answer_Chris" />

            <CheckBox android:id="@+id/Nate"
                style="@style/answer"
                android:text="@string/answer_Nate" />

        </LinearLayout>

        <LinearLayout style="@style/horizontal_layout">

            <CheckBox android:id="@+id/Matt"
                style="@style/answer"
                android:text="@string/answer_Matt" />

            <CheckBox android:id="@+id/Megan"
                style="@style/answer"
                android:text="@string/answer_Megan" />

        </LinearLayout>


        <!--Question 3-->
        <TextView style="@style/question"
            android:text="@string/question_values" />

       <EditText android:id="@+id/values"
           android:inputType="text"
           android:hint="@string/values_hint"
           style="@style/edit_text"/>


        <!--Question 4-->
        <TextView style="@style/question"
            android:text="@string/question_company_name" />

        <RadioGroup style="@style/radio_group">

            <RadioButton android:id="@+id/Pope_Tech"
                style="@style/answer"
                android:text="@string/answer_Pope_Tech" />

            <RadioButton android:id="@+id/Pope_IT"
                style="@style/answer"
                android:text="@string/answer_Pope_IT" />

            <RadioButton android:id="@+id/Loss_Prevention"
                style="@style/answer"
                android:text="@string/answer_Loss_Prevention" />

        </RadioGroup>


        <!--Submit-->
        <Button style="@style/button"
            android:onClick="submitQuiz"
            android:text="@string/submit_text"/>

    </LinearLayout>


</ScrollView>
